--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 client_secret_260771863698-vjqm75a1bttob7ko11ftcuahtv6q3fh8.apps.googleusercontent.com.json
+*.pptx
