--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ yarn-error.log*
 next-env.d.ts
 client_secret_260771863698-vjqm75a1bttob7ko11ftcuahtv6q3fh8.apps.googleusercontent.com.json
 *.pptx
+public/Classify סרטון אתר.mp4
