EvaluationPage & Radio selector

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@supabase/supabase-js": "^2.45.1",
     "@svgr/webpack": "^8.1.0",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
