docker git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ next-env.d.ts
 client_secret_260771863698-vjqm75a1bttob7ko11ftcuahtv6q3fh8.apps.googleusercontent.com.json
 *.pptx
 public/Classify סרטון אתר.mp4
+db_cluster-04-10-2024@04-16-15.backup.gz
