--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,7 +3,7 @@ name: Build and Deploy Frontend
 on:
   push:
     branches: [main]
-  workflow_dispatch: # מאפשר הפעלה ידנית
+  workflow_dispatch:
 
 env:
   SERVER_URL: https://classify-backend.vercel.app
@@ -20,6 +20,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # הוספת תמיכה ב-QEMU להרצת אמולציה של ארכיטקטורות שונות
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -35,6 +39,7 @@ jobs:
         with:
           context: .
           push: true
+          platforms: linux/amd64,linux/arm64 # הוספנו תמיכה בשתי הארכיטקטורות
           build-args: |
             NEXT_PUBLIC_API_URL=${{ secrets.NEXT_PUBLIC_API_URL }}
             SERVER_URL=${{ secrets.SERVER_URL }}
