--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -6,7 +6,6 @@ on:
   workflow_dispatch:
 
 env:
-  SERVER_URL: https://classify-backend.vercel.app
   DOCKER_IMAGE: ghcr.io/${{ github.repository }}/classify-frontend
 
 jobs:
@@ -20,29 +19,41 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # הוספת תמיכה ב-QEMU להרצת אמולציה של ארכיטקטורות שונות
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Login to GitHub Container Registry
+        if: success()
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      # - name: Run tests
+      #   run: npm test
+
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          platforms: linux/amd64,linux/arm64 # הוספנו תמיכה בשתי הארכיטקטורות
+          platforms: linux/amd64,linux/arm64
           build-args: |
             NEXT_PUBLIC_API_URL=${{ secrets.NEXT_PUBLIC_API_URL }}
             SERVER_URL=${{ secrets.SERVER_URL }}
           tags: |
             ${{ env.DOCKER_IMAGE }}:latest
             ${{ env.DOCKER_IMAGE }}:${{ github.sha }}
+            ${{ env.DOCKER_IMAGE }}:${{ github.ref_name }}
