--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "recharts": "^2.12.7"
+    "recharts": "^2.12.7",
+    "sharp": "^0.33.5"
   },
   "devDependencies": {
     "@types/node": "20.12.12",
